test/error/LexResourceSyntax3.fu
public static class Test
{
	public static bool Run()
	{
		byte[] a = resource<byte>("foo"); //ERROR: Expected 'resource<byte[]>'
		return true;
	}
}
